tests/algorithms/transpiler/Zig/data_structures/suffix_tree/tests/test_suffix_tree.zig
// Generated by Mochi Zig transpiler on 2025-08-24 22:16 +0700
const std = @import("std");

fn handleError(err: anyerror) noreturn {
    std.debug.panic("{any}", .{err});
}

const SuffixTree = struct {
    text: []const u8,
};

const text_var: []const u8 = "banana";
var st_var: SuffixTree = undefined;
const patterns_exist_var: [][]const u8 = &[_][]const u8{};
var i_var_2: i64 = 0;
const patterns_none_var: [][]const u8 = &[_][]const u8{};
const substrings_var: [][]const u8 = &[_][]const u8{};

fn suffix_tree_new(text_param: []const u8) SuffixTree {
    return .{ .text = text_param };
}

fn suffix_tree_search(st_param: SuffixTree, pattern: []const u8) bool {
    if (@as(i64, @intCast(pattern.len)) == 0) {
        return true;
    }
    var i_var_1: i64 = 0;
    i_var_1 = i_var_1;
    const n: i64 = @as(i64, @intCast(st_param.text.len));
    const m: i64 = @as(i64, @intCast(pattern.len));
    while (i_var_1 <= n -% m) {
        var j: i64 = 0;
        j = j;
        var found: bool = true;
        found = found;
        while (j < m) {
            if (!std.mem.eql(u8, st_param.text[_idx(st_param.text.len, i_var_1 +% j).._idx(st_param.text.len, i_var_1 +% j) + 1], pattern[_idx(pattern.len, j).._idx(pattern.len, j) + 1])) {
                found = false;
                break;
            }
            j = j +% 1;
        }
        if (found) {
            return true;
        }
        i_var_1 = i_var_1 +% 1;
    }
    return false;
}

pub fn main() void {
    {
        const __start = _now();
        const __start_mem: i64 = _mem();
        st_var = suffix_tree_new(text_var);
        i_var_2 = 0;
        i_var_2 = 0;
        while (i_var_2 < @as(i64, @intCast(patterns_exist_var.len))) {
            std.debug.print("{s}\n", .{_str(suffix_tree_search(st_var, patterns_exist_var[_idx(patterns_exist_var.len, i_var_2)]))});
            i_var_2 = i_var_2 +% 1;
        }
        while (i_var_2 < @as(i64, @intCast(patterns_none_var.len))) {
            std.debug.print("{s}\n", .{_str(suffix_tree_search(st_var, patterns_none_var[_idx(patterns_none_var.len, i_var_2)]))});
            i_var_2 = i_var_2 +% 1;
        }
        std.debug.print("{s}\n", .{_str(suffix_tree_search(st_var, ""))});
        std.debug.print("{s}\n", .{_str(suffix_tree_search(st_var, text_var))});
        while (i_var_2 < @as(i64, @intCast(substrings_var.len))) {
            std.debug.print("{s}\n", .{_str(suffix_tree_search(st_var, substrings_var[_idx(substrings_var.len, i_var_2)]))});
            i_var_2 = i_var_2 +% 1;
        }
        const __end = _now();
        const __end_mem: i64 = _mem();
        const __duration_us: i64 = @divTrunc(@as(i64, @intCast(__end - __start)), 1000);
        const __mem_diff: i64 = __end_mem - __start_mem;
        const __memory_bytes: i64 = if (__mem_diff < 0) -__mem_diff else __mem_diff;
        std.debug.print("{{\"duration_us\":{d},\"memory_bytes\":{d},\"name\":\"main\"}}\n", .{__duration_us, __memory_bytes});
    }
}

var _now_seed: i64 = 0;
var _now_seeded: bool = false;
fn _now() i64 {
    if (_now_seeded) {
        _now_seed = @mod(_now_seed * 1664525 + 1013904223, 2147483647);
        return _now_seed;
    }
    if (! _now_seeded) {
        if (std.process.getEnvVarOwned(std.heap.page_allocator, "MOCHI_NOW_SEED")) |env_seed| {
            defer std.heap.page_allocator.free(env_seed);
            if (std.fmt.parseInt(i64, env_seed, 10)) |v| {
                _now_seed = v;
                _now_seeded = true;
                _now_seed = @mod(_now_seed * 1664525 + 1013904223, 2147483647);
                return _now_seed;
            } else |_| {}
        } else |_| {}
    }
    return @as(i64, @intCast(std.time.nanoTimestamp()));
}

fn _idx(len: usize, i: i64) usize {
    return if (i < 0 or i >= @as(i64, @intCast(len))) 0 else @as(usize, @intCast(i));
}

fn _str(v: anytype) []const u8 {
    if (@TypeOf(v) == f64 or @TypeOf(v) == f32) {
        return std.fmt.allocPrint(std.heap.page_allocator, "{d}", .{v}) catch unreachable;
    }
    const info = @typeInfo(@TypeOf(v));
    switch (info) {
    .Pointer => |p| {
        if (p.size == .Slice) {
            var out = std.ArrayList(u8).init(std.heap.page_allocator);
            defer out.deinit();
            out.append('[') catch unreachable;
            for (v, 0..) |e, i| {
                if (i != 0) { out.append(' ') catch unreachable; }
                const s = _str(e);
                out.appendSlice(s) catch unreachable;
            }
            out.append(']') catch unreachable;
            return out.toOwnedSlice() catch unreachable;
        }
    },
    .Struct => |_| {
        if (@hasDecl(@TypeOf(v), "iterator")) {
            const KVPair = struct{ ks: []const u8, vs: []const u8 };
            var pairs = std.ArrayList(KVPair).init(std.heap.page_allocator);
            defer pairs.deinit();
            var it = v.iterator();
            while (it.next()) |e| {
                const ks = _str(e.key_ptr.*);
                const vs = _str(e.value_ptr.*);
                pairs.append(.{ .ks = ks, .vs = vs }) catch unreachable;
            }
            std.sort.heap(KVPair, pairs.items, {}, struct {
                pub fn less(_: void, a: KVPair, b: KVPair) bool {
                    return std.mem.lessThan(u8, a.ks, b.ks);
                }
            }.less);
            var out = std.ArrayList(u8).init(std.heap.page_allocator);
            defer out.deinit();
            out.appendSlice("map[") catch unreachable;
            for (pairs.items, 0..) |e, i| {
                if (i != 0) { out.append(' ') catch unreachable; }
                out.appendSlice(e.ks) catch unreachable;
                out.append(':') catch unreachable;
                out.appendSlice(e.vs) catch unreachable;
            }
            out.append(']') catch unreachable;
            return out.toOwnedSlice() catch unreachable;
        }
    },
    else => {},
    }
    return std.fmt.allocPrint(std.heap.page_allocator, "{any}", .{v}) catch unreachable;
}

fn _mem() i64 {
    const path = "/proc/self/statm";
    var file = std.fs.openFileAbsolute(path, .{}) catch return 0;
    defer file.close();
    var buf: [64]u8 = undefined;
    const n = file.readAll(&buf) catch return 0;
    var it = std.mem.tokenizeScalar(u8, buf[0..n], ' ');
    _ = it.next(); // total program size
    if (it.next()) |tok| {
        const pages = std.fmt.parseInt(i64, tok, 10) catch return 0;
        return pages * @as(i64, @intCast(std.mem.page_size));
    }
    return 0;
}

fn _print(v: []const u8) void {
    std.debug.print("{s}\n", .{v});
}
